<resources>
    <string name="app_name">Jellieve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Activity String -->
    <string name="app_title">Jellieve</string>


    <string name="home_title_trust">명예의 전당</string>
    <string name="home_title_deal">거래 게시판</string>
    <string name="home_title_share">정보 공유 게시판</string>
    <string name="home_more">더보기</string>

    <string name="profile_btn">채팅 걸기</string>

    <string name="profile_tab_deal">소통 내역</string>
    <string name="profile_tab_share">정보 공유 내역</string>

    <string name="title_home">홈</string>
    <string name="title_deal">소통 게시판</string>
    <string name="title_share">정보 공유 게시판</string>
    <string name="title_chat_list">채팅</string>
    <string name="title_setting">설정</string>
    <string name="title_profile">회원 정보</string>
</resources>