<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_margin"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Home.TextViewStyle"
            android:id="@+id/home_text_trust"
            android:text="@string/home_title_trust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_title_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler_trust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_recycler_margin"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_trust"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/home_title_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/Home.TextViewStyle"
                android:id="@+id/home_text_deal"
                android:text="@string/home_title_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/home_more"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/home_more_padding"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_arrow_right_24"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler_deal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_recycler_margin"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_deal"
            tools:itemCount="3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/home_title_margin"
            android:background="@drawable/bg_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_title_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Home.TextViewStyle"
                android:text="@string/home_title_share"
                android:id="@+id/home_text_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/home_more"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/home_more_padding"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_arrow_right_24"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_recycler_margin"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_share"
            tools:itemCount="3"/>
    </LinearLayout>
</ScrollView>